--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Собери числа в число<strong>2048!</strong></p>
+      <p class="game-intro">Собери числа до <strong> 2048!</strong></p>
       <a class="restart-button">Новая игра</a>
     </div>
 
