--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">TLatT 2048</h1>
+      <h2 class="title">2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Собери emoji <strong> админов!</strong></p>
+      <p class="game-intro">Собери emoji <strong> админов Time Lord and the TARDIS!</strong></p>
       <a class="restart-button">Новая игра</a>
     </div>
 
